--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -21,8 +21,8 @@
 
         </p>
         <p>
-            <a class="btn btn-lg btn-ingo" href="/order">상품 주문</a>
-            <a class="btn btn-lg btn-ingo" href="/orders">상품 내역</a>
+            <a class="btn btn-lg btn-secondary" href="/order">상품 주문</a>
+            <a class="btn btn-lg btn-secondary" href="/orders">상품 내역</a>
         </p>
     </div>
     <div th:replace="fragments/footer :: footer"/>
