20221212 JPA 활용 2 - 회원수정API, 회원조회API

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,6 +20,7 @@
             <a class="btn btn-lg btn-dark" href="/items">상품 목록</a>
 
         </p>
+        <p class="lead">주문 기능</p>
         <p>
             <a class="btn btn-lg btn-secondary" href="/order">상품 주문</a>
             <a class="btn btn-lg btn-secondary" href="/orders">상품 내역</a>
